# ws_RAMS

./: .gitignore  README.md
docs/: ABB_EGM_PI05_REAL_ROBOT_RUNBOOK.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/abb_bringup/share/abb_bringup/: local_setup.sh  package.sh
install/abb_egm_rws_managers/share/abb_egm_rws_managers/: package.sh
install/abb_hardware_interface/include/abb_hardware_interface/: abb_hardware_interface.hpp  utilities.hpp  visibility_control.h
install/abb_hardware_interface/share/abb_hardware_interface/: abb_hardware_interface.xml  local_setup.bash  package.sh  (+4 more)
install/abb_pi0_bridge/share/abb_pi0_bridge/: PI0_POLICY_HTTP_PROTOCOL.md  README.md  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/abb_pi0_bridge/share/abb_pi0_bridge/config/: pi0_bridge.params.yaml  pi0_robotstudio_http.params.yaml
install/abb_pi0_bridge/share/abb_pi0_bridge/launch/: abb_pi0_bridge.launch.py
log/: latest_build  latest_list  latest_test  latest_test-result
rapid/: TRob1Main_WS_RAMS_EGM_Joint.mod  TRob1Main_WS_RAMS_EGM_Joint_Blocking_CondTime600_NoPrep.mod  TRob1Main_WS_RAMS_EGM_Joint_CondTime30.mod  TRob1Main_WS_RAMS_EGM_Joint_PrepMove.mod  TRob1Main_WS_RAMS_EGM_Joint_PrepMove_Blocking_CondTime600.mod  TRob1Main_WS_RAMS_EGM_Joint_PrepMove_NoWait.mod  TRob1Main_WS_RAMS_EGM_Joint_PrepMove_NoWait_Looped.mod  TRob1Main_WS_RAMS_EGM_Joint_PrepMove_NoWait_Looped_CondTime30.mod  TRob1Main_WS_RAMS_EGM_Joint_PrepMove_SingleShot.mod  TRob1Main_WS_RAMS_EGM_Joint_VC_Parity.mod
src/abb_pi0_bridge/: PI0_POLICY_HTTP_PROTOCOL.md  README.md  ROBOTSTUDIO_PI0_RUNBOOK.md  ROBOTSTUDIO_PI0_SETUP.md  package.xml  setup.cfg  setup.py
src/abb_pi0_bridge/abb_pi0_bridge/: __init__.py  bridge_core.py  bridge_node.py  cartesian_workspace.py  mock_policy.py  rws_joint_state_publisher.py
src/abb_pi0_bridge/config/: pi0_bridge.params.yaml  pi0_robotstudio_http.params.yaml
src/abb_pi0_bridge/launch/: abb_pi0_bridge.launch.py  robotstudio_pi0.launch.py  workcell_pi0.launch.py
src/abb_pi0_bridge/tests/: test_bridge_core.py  test_cartesian_workspace.py  test_control_mode.py  test_policy_backends.py  test_policy_stub_server.py  test_protocol.py  test_robotstudio_preflight.py
src/click_to_move/: CMakeLists.txt  package.xml
src/click_to_move/launch/: system_bringup.launch.py
src/click_to_move/src/: click_to_move_node.cpp
src/workcell_config/config/: workcell.ros2_control.xacro  workcell.urdf.xacro
src/workcell_description/urdf/: workcell.urdf.xacro
third_party_patches/: README.md  abb_egm_rws_managers.patch  abb_librws.patch  abb_ros2_upstream.patch
tools/: abb_pi0_diagnose.py  check_abb_egm_motion_readiness.py  check_abb_egm_profile_alignment.py  check_pi0_motion_preflight.py  check_workcell_pi0_chain.py  colcon_build_system_python.sh  openpi_http_adapter.py  run_cartesian_left_test.sh  run_pi05_live_test.sh  seed_forward_position_hold.py  start_robotstudio_pi0.sh  start_workcell_hmi_remote.sh  start_workcell_pi0_remote.sh  stop_robotstudio_pi0.sh  stop_workcell_hmi_remote.sh  stop_workcell_pi0_remote.sh  workcell_dashboard.py  workcell_hmi_qt.py
(+73 files in other folders)
