<?xml version="1.0"?>
<package format="3">
  <name>abb_pi0_bridge</name>
  <version>0.1.0</version>
  <description>Phase-1 bridge package for future pi0/openpi integration on ABB IRB6700 ROS2 systems.</description>

  <maintainer email="hang-wu23@mails.tsinghua.edu.cn">Heng Wu</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
